# prescaler

./: .gitignore  README.md
dashboard/: Dockerfile  docker-compose.yml  package-lock.json  package.json
dashboard/src/lib/components/: ServerMonitor.svelte
dashboard/src/routes/: +page.svelte
event/: go.mod  main.go  publisher.go  tsdb.go
event/model/: Event.go  ServerStat.go
prescal/: CMakeLists.txt  CONTRIBUTING.md  README.md  config.yml  main.c  run.sh  troubleshoot.md
prescal/ds/: linkedlist.c
prescal/include/: configuration.h  dclient.h  engine.h  epoll.h  helper.h  http.h  metrics.h  timer.h  tsdb.h
prescal/include/ds/: linkedlist.h
prescal/src/: configuration.c  dclient.c  engine.c  epoll.c  helper.c  http.c  metrics.c  timer.c  tsdb.c
traffic/: CMakeLists.txt  main.c  run.sh  traffic.conf
traffic/include/: config.h  http.h
traffic/src/: config.c  http.c
